Working on an update service that check the latest version.

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -201,5 +201,9 @@
 			</intent-filter> 
         </service>
 		
+        <!-- App and search module update service -->
+        <service android:name="org.transdroid.service.UpdateService" />
+        <receiver android:name="org.transdroid.service.UpdateReceiver" />
+        
 	</application>
 </manifest> 
