--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -23,7 +23,8 @@
 	android:installLocation="auto">
 	
 	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="13" />
-	<supports-screens smallScreens="true" normalScreens="true" largeScreens="true" xlargeScreens="true" android:anyDensity="true" />
+	<supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" 
+		android:xlargeScreens="true" android:anyDensity="true" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.VIBRATE" />
@@ -63,7 +64,7 @@
         		<category android:name="android.intent.category.DEFAULT" />
         		<category android:name="android.intent.category.BROWSABLE" />
         		<data android:mimeType="application/x-bittorrent" />
-        		<data scheme="file" android:mimeType="application/x-bittorrent" />
+        		<data android:scheme="file" android:mimeType="application/x-bittorrent" />
             </intent-filter>
             <intent-filter>
         		<action android:name="android.intent.action.VIEW" />
