Creating new preferences screens.

--- a/lite/.project
+++ b/lite/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TransdroidLite</name>
+	<name>Transdroid Core</name>
 	<comment></comment>
 	<projects>
 	</projects>
