--- a/lite/.classpath
+++ b/lite/.classpath
@@ -9,6 +9,6 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/Transdroid Torrent Connect"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/Transdroid Torrent Connect"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
