Getting the details screen lay out properly.

--- a/lite/AndroidManifest.xml
+++ b/lite/AndroidManifest.xml
@@ -15,17 +15,25 @@
 		android:smallScreens="true"
 		android:xlargeScreens="true" />
 
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+	
 	<application
 		android:allowBackup="true"
-		android:icon="@drawable/ic_activity_torrents"
+		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
-		android:theme="@style/TransdroidTheme" >
+		android:theme="@style/Theme.Sherlock" >
 
 		<!-- Main activities -->
 		<activity
 			android:name="org.transdroid.core.gui.TorrentsActivity_"
 			android:label="@string/app_name"
-			android:uiOptions="splitActionBarWhenNarrow" >
+			android:icon="@drawable/ic_activity_torrents"
+			android:uiOptions="splitActionBarWhenNarrow"
+			android:theme="@style/TransdroidTheme" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
@@ -41,7 +49,9 @@
 		</activity>
 		<activity
 			android:name="org.transdroid.core.gui.DetailsActivity_"
-			android:uiOptions="splitActionBarWhenNarrow" >
+			android:icon="@drawable/ic_activity_torrents"
+			android:uiOptions="splitActionBarWhenNarrow"
+			android:theme="@style/TransdroidTheme" >
 		</activity>
 
 		<!-- Settings screens -->
@@ -49,12 +59,15 @@
 		<activity android:name="org.transdroid.core.gui.settings.ServerSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.WebsearchSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.RssfeedSettingsActivity_" />
-		<activity android:name="org.transdroid.core.gui.settings.OtherSettingsActivity_" />
-
+		<activity android:name="org.transdroid.core.gui.settings.NotificationSettingsActivity_" />
+		<activity android:name="org.transdroid.core.gui.settings.SystemSettingsActivity_" />
+		
 		<!-- Search -->
 		<activity
 			android:name="org.transdroid.core.gui.SearchActivity"
-			android:label="@string/search_torrentsearch" >
+			android:label="@string/search_torrentsearch"
+			android:icon="@drawable/ic_activity_torrents"
+			android:theme="@style/TransdroidTheme" >
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 
