--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,8 +18,8 @@
  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.transdroid"
-	android:versionName="1.1.12" 
-	android:versionCode="154"
+	android:versionName="1.1.13" 
+	android:versionCode="155"
 	android:installLocation="auto">
 	
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16" />
@@ -70,7 +70,21 @@
             <intent-filter>
         		<action android:name="android.intent.action.VIEW" />
         		<category android:name="android.intent.category.DEFAULT" />
+        		<category android:name="android.intent.category.BROWSABLE" />
         		<data android:scheme="file" android:pathPattern=".*\\.torrent" />
+            </intent-filter>
+            <intent-filter>
+        		<action android:name="android.intent.action.VIEW" />
+        		<category android:name="android.intent.category.DEFAULT" />
+        		<category android:name="android.intent.category.BROWSABLE" />
+        		<data android:mimeType="application/x-bittorrent" />
+        		<data android:scheme="content" android:mimeType="application/x-bittorrent" />
+            </intent-filter>
+            <intent-filter>
+        		<action android:name="android.intent.action.VIEW" />
+        		<category android:name="android.intent.category.DEFAULT" />
+        		<category android:name="android.intent.category.BROWSABLE" />
+        		<data android:scheme="content" android:pathPattern=".*\\.torrent" />
             </intent-filter>
             <intent-filter>
         		<action android:name="android.intent.action.VIEW" />
