Split Transdroid into Lite (no search and RSS) and Full versions, with the Core project containing all function code.

--- a/full/project.properties
+++ b/full/project.properties
@@ -12,6 +12,4 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../external/JakeWharton-ActionBarSherlock/library
-android.library.reference.2=../external/ColorPickerPreference
-android.library=true
+android.library.reference.1=../core
