--- a/lite/project.properties
+++ b/lite/project.properties
@@ -12,6 +12,4 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../external/JakeWharton-ActionBarSherlock/library
-android.library.reference.2=../external/ColorPickerPreference
-android.library=true
+android.library.reference.1=../core
