--- a/full/AndroidManifest.xml
+++ b/full/AndroidManifest.xml
@@ -61,7 +61,7 @@
 		<activity android:name="org.transdroid.core.gui.settings.RssfeedSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.NotificationSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.SystemSettingsActivity_" />
-		<activity android:name="org.transdroid.core.gui.navigation.DialogHolderActivity_" />
+		<activity android:name="org.transdroid.core.gui.navigation.DialogHelper_" />
 		
 		<!-- Search -->
 		<activity
