--- a/lite/AndroidManifest.xml
+++ b/lite/AndroidManifest.xml
@@ -24,7 +24,7 @@
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name"
+		android:label="@string/system_name"
 		android:theme="@style/Theme.Sherlock" >
 
 		<!-- Main activities -->
