Added server status (counts and speeds) in the action bar.

--- a/lite/AndroidManifest.xml
+++ b/lite/AndroidManifest.xml
@@ -19,7 +19,10 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+
+	<uses-feature
+		android:name="android.hardware.touchscreen"
+		android:required="false" />
 	
 	<application
 		android:allowBackup="true"
@@ -31,9 +34,8 @@
 		<activity
 			android:name="org.transdroid.core.gui.TorrentsActivity_"
 			android:label="@string/app_name"
-			android:icon="@drawable/ic_activity_torrents"
-			android:uiOptions="splitActionBarWhenNarrow"
-			android:theme="@style/TransdroidTheme" >
+			android:theme="@style/TransdroidTheme"
+			android:uiOptions="splitActionBarWhenNarrow" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
@@ -42,14 +44,9 @@
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 			</intent-filter>
-
-			<meta-data
-				android:name="android.app.default_searchable"
-				android:value="org.transdroid.gui.search.Search" />
 		</activity>
 		<activity
 			android:name="org.transdroid.core.gui.DetailsActivity_"
-			android:icon="@drawable/ic_activity_torrents"
 			android:uiOptions="splitActionBarWhenNarrow"
 			android:theme="@style/TransdroidTheme" >
 		</activity>
@@ -57,10 +54,12 @@
 		<!-- Settings screens -->
 		<activity android:name="org.transdroid.core.gui.settings.MainSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.ServerSettingsActivity_" />
+		<activity android:name="org.transdroid.core.gui.settings.WebsearchSettingsActivity_" />
+		<activity android:name="org.transdroid.core.gui.settings.RssfeedSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.NotificationSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.settings.SystemSettingsActivity_" />
 		<activity android:name="org.transdroid.core.gui.navigation.DialogHelper_" />
-		
+
 	</application>
 
 </manifest>
